# SQL-Siddha

./: README.md  pyproject.toml  requirements.txt
sql_siddha/: __init__.py  cli.py  formatter.py  linter.py
tests/: conftest.py  test_cli.py  test_cli_subprocess.py  test_formatter.py  test_linter.py
