[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-siddha"
version = "0.1.0"
description = "SQL linter and formatter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlparse>=0.4.4",
]

[project.scripts]
sql-siddha = "sql_siddha.cli:main"
